--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,16 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/systemjs/dist/s.js",
               "node_modules/systemjs/dist/extras/named-register.js",
-              "node_modules/systemjs/dist/extras/amd.js"
+              "node_modules/systemjs/dist/extras/amd.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/js/dist/index.js"
+
             ]
           },
           "configurations": {
