--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "angular-froala-wysiwyg": "^3.1.0",
     "hammerjs": "^2.0.8",
+    "node-sass": "^4.13.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
