--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "angular-file-saver": "^1.1.3",
     "angular-froala-wysiwyg": "^3.1.0",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "ngx-google-analytics": "^8.0.0",
     "ngx-guided-tour": "^1.1.8",
