--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "angular-file-saver": "^1.1.3",
-    "angular-froala-wysiwyg": "^3.1.0",
+    "angular-froala-wysiwyg": "2.7.2",
+    "frola-editor": "2.7.0",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "ngx-google-analytics": "^8.0.0",
