--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "ngx-google-analytics": "^8.0.0",
     "ngx-guided-tour": "^1.1.8",
+    "ngx-mat-select-search": "^2.2.0",
     "node-sass": "^4.13.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.11.1",
