--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ngx-editor": "^5.0.0-alpha.3",
     "ngx-google-analytics": "^8.0.0",
     "ngx-guided-tour": "^1.1.8",
+    "ngx-mat-daterange-picker": "^1.1.4",
     "ngx-mat-select-search": "^2.2.0",
     "node-sass": "^4.13.1",
     "rxjs": "~6.4.0",
