--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.1000.0",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "^10.0.2",
     "@kolkov/angular-editor": "^1.1.2",
     "angular-file-saver": "^1.1.3",
     "angular-froala-wysiwyg": "^3.1.1-1",
@@ -57,6 +59,6 @@
     "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "^3.4.5"
   }
 }
