--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2019", "es2018", "dom"]
+    "lib": ["es2019", "es2018", "dom"],
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
