--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@kolkov/angular-editor": "^1.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "angular-file-saver": "^1.1.3",
     "angular-froala-wysiwyg": "^3.1.1-1",
     "file-saver": "^2.0.2",
