--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/router": "~8.2.14",
     "@kolkov/angular-editor": "^1.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@types/jquery": "^3.5.0",
     "angular-file-saver": "^1.1.3",
     "angular-froala-wysiwyg": "^3.1.1-1",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
     "ngx-editor": "^5.0.0-alpha.3",
     "ngx-google-analytics": "^8.0.0",
     "ngx-guided-tour": "^1.1.8",
