--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-froala-wysiwyg": "^3.1.1-1",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "http-server": "^0.12.3",
     "ngx-editor": "^5.0.0-alpha.3",
     "ngx-google-analytics": "^8.0.0",
     "ngx-guided-tour": "^1.1.8",
