--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
-    "@angular/pwa": "^0.1000.1",
     "@angular/router": "~10.0.9",
     "@angular/service-worker": "^10.0.9",
     "@kolkov/angular-editor": "^1.1.2",
@@ -39,19 +38,19 @@
     "ngx-mat-select-search": "^2.2.0",
     "node-sass": "^4.13.1",
     "rxjs": "~6.6.2",
-    "tslib": "^1.11.1",
-    "zone.js": "~0.10.3"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.29",
-    "@angular/cli": "^8.3.29",
+    "@angular-devkit/build-angular": "~0.901.12",
+    "@angular/cli": "^9.1.12",
     "@angular/compiler-cli": "~10.0.9",
     "@angular/language-service": "~10.0.9",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.2",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
