--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.9",
+    "@angular/animations": "^10.0.10",
     "@angular/cdk": "^10.1.3",
-    "@angular/common": "~10.0.9",
-    "@angular/compiler": "~10.0.9",
-    "@angular/core": "~10.0.9",
+    "@angular/common": "^10.0.10",
+    "@angular/compiler": "^10.0.10",
+    "@angular/core": "^10.0.10",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "~10.0.9",
-    "@angular/localize": "^10.0.9",
+    "@angular/forms": "^10.0.10",
+    "@angular/localize": "^10.0.10",
     "@angular/material": "^10.1.3",
-    "@angular/platform-browser": "~10.0.9",
-    "@angular/platform-browser-dynamic": "~10.0.9",
-    "@angular/router": "~10.0.9",
-    "@angular/service-worker": "^10.0.9",
+    "@angular/platform-browser": "^10.0.10",
+    "@angular/platform-browser-dynamic": "^10.0.10",
+    "@angular/router": "^10.0.10",
+    "@angular/service-worker": "^10.0.10",
     "@kolkov/angular-editor": "^1.1.3",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@types/jquery": "^3.5.1",
     "angular-file-saver": "^1.1.3",
+    "core-js": "^2.6.11",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "http-server": "^0.12.3",
@@ -39,28 +40,28 @@
     "ngx-mat-select-search": "^2.2.0",
     "node-sass": "^4.13.1",
     "rxjs": "~6.6.2",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "tslib": "^1.13.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.6",
     "@angular/cli": "^10.0.6",
-    "@angular/compiler-cli": "~10.0.9",
-    "@angular/language-service": "~10.0.9",
+    "@angular/compiler-cli": "^10.0.10",
+    "@angular/language-service": "^10.0.10",
     "@types/hammerjs": "^2.0.36",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.54",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "^3.3.1",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^7.0.1",
     "tslint": "~6.1.0",
     "typescript": "^3.9.7"
   }
