--- a/package.json
+++ b/package.json
@@ -26,22 +26,23 @@
     "@angular/router": "^10.0.10",
     "@angular/service-worker": "^10.0.10",
     "@kolkov/angular-editor": "^1.1.3",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@types/jquery": "^3.5.1",
     "angular-file-saver": "^1.1.3",
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.5",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "http-server": "^0.12.3",
     "ngx-editor": "^5.0.0-alpha.9",
-    "ngx-google-analytics": "^8.1.1",
+    "ngx-google-analytics": "^9.0.0",
     "ngx-guided-tour": "^1.1.10",
     "ngx-mat-daterange-picker": "^1.1.4",
-    "ngx-mat-select-search": "^2.2.0",
+    "ngx-mat-select-search": "^3.0.3",
+    "node": "^14.8.0",
     "node-sass": "^4.13.1",
     "rxjs": "~6.6.2",
-    "tslib": "^1.13.0",
-    "zone.js": "^0.8.29"
+    "tslib": "^2.0.1",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.6",
@@ -51,17 +52,17 @@
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.54",
+    "@types/node": "^14.6.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "^3.3.1",
+    "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "^7.0.1",
+    "ts-node": "^8.10.2",
     "tslint": "~6.1.0",
     "typescript": "^3.9.7"
   }
