--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "http-server": "^0.12.3",
+    "lodash-es": "^4.17.15",
     "ngx-editor": "^5.0.0-alpha.9",
     "ngx-google-analytics": "^9.0.0",
     "ngx-guided-tour": "^1.1.10",
